--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="red">#FF5252</color>
+    <color name="green_water">#00796B</color>#1E90FF
+    <color name="dodger_blue">#1E90FF</color>
 </resources>
