--- a/app/src/main/res/layout/activity_details_game.xml
+++ b/app/src/main/res/layout/activity_details_game.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="280dp"
             android:src="@drawable/splash"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,7 +32,7 @@
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+            app:layout_constraintTop_toBottomOf="@+id/tbDetailsGame" />
 
         <TextView
             android:id="@+id/tvNameGame"
@@ -91,12 +91,12 @@
             android:src="@drawable/ic_edit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintTop_toBottomOf="@+id/tbDetailsGame"
             app:layout_constraintVertical_bias="0.0"
             android:contentDescription="@string/edit" />
 
         <Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/tbDetailsGame"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:navigationIcon="@drawable/ic_arrow_back"
