--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/ivGame"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 android:src="@drawable/splash" />
 
             <TextView
