Subindo ajustes de layout

--- a/app/src/main/res/layout/activity_details_game.xml
+++ b/app/src/main/res/layout/activity_details_game.xml
@@ -14,9 +14,9 @@
         <ImageView
             android:id="@+id/ivGame"
             android:layout_width="match_parent"
-            android:layout_height="280dp"
+            android:layout_height="340dp"
             android:src="@drawable/splash"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="160dp"
+            android:layout_marginTop="220dp"
             android:text="God of War"
             android:textColor="@color/white"
             android:textSize="30sp"
@@ -75,7 +75,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="24dp"
-            android:text="God of War é uma série de jogos eletrônicos de ação-aventura vagamente baseado nas mitologias grega e nórdica sendo criado originalmente por David Jaffe da Santa Monica Studio. Iniciada em 2005, a série tornou-se carro-chefe para a marca PlayStation, que consiste em oito jogos em várias plataformas. A história centra-se em torno de seu personagem, Kratos, um guerreiro espartano enganado para matar sua esposa e filha por seu antigo mestre, o deus da guerra Ares. Kratos mata Ares a mando da deusa Atena e toma seu lugar como o novo deus da guerra, mas ainda é assombrado por pesadelos de seu passado. Posteriormente é revelado ser um semideus e filho de Zeus, o rei dos deuses do Olimpo, que trai Kratos. O espartano em seguida busca vingança contra os deuses por suas maquinações. O que se segue na primeira era da série é uma tentativa de libertar-se da influência dos deuses, bem como dos titãs, e da vingança exata. Muitos anos depois de se vingar dos deuses gregos, Kratos acaba no mundo dos deuses nórdicos com um filho chamado Atreus e dá uma volta pelo bem."
+            android:text="Um dos melhores jogos de Hack And Slash."
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/llRelease" />
@@ -92,7 +92,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tbDetailsGame"
-            app:layout_constraintVertical_bias="0.0"
             android:contentDescription="@string/edit" />
 
         <Toolbar
